<resources>
    <string name="app_name">Student Information System</string>
    <string name="title_activity_grade_information">GradeInformation</string>
    <string name="tab_text_1">Summary Grade</string>
    <string name="tab_text_2">Detailed Grade</string>
    <string name="textDonem">Dönem :</string>
    <string name="textApsent">Apsent :</string>
    <string name="textPossessions">Possessions:</string>
    <string name="textMugla">MUĞLA</string>
    <string name="textUniversityName">SITKI KOÇMAN ÜNİVERSİTESİ</string>
    <string name="textStudentInformationSystem">Öğrenci Bilgi Sistemi</string>
    <string name="textDersAdi">Ders Adı</string>
    <string name="textKredi">Kredi</string>
    <string name="textSinif">Sınıf</string>
    <string name="textDevamsizlikSaati">Devamsızlık Saati</string>
    <string name="textNumAndName">160709031 - Ali Emre Kürekci</string>
    <string name="btnNotBilgisi">Not Bilgisi</string>
    <string name="btnDevamsizlikBilgisi">Devamsızlık Durumu</string>
    <string name="btnTranskript">Transkript</string>
    <string name="btnAkademikTakvim">Akademik Takvim</string>
    <string name="btnSinavTakvimi">Sınav Takvimi</string>
    <string name="btnMufredatDurumu">Müfredat Durumu</string>
    <string name="btnHazirlikIslemleri">Hazırlık İşlemleri</string>
    <string name="textHazirlikIslemleri">HAZIRLIK İŞLEMLERİ</string>
    <string name="btnNotListesi">Not Listesi</string>
    <string name="btnDevamsizlik">Devamsızlık</string>
    <string name="btnDersProgrami">Ders Programı</string>
    <string name="textKullaniciAdi">Kullanıcı Adı:</string>
    <string name="textSıfre">Şifre:</string>
    <string name="textPosta">\@posta.mu.edu.tr</string>
    <string name="textSayilarinToplami">Sayıların Toplamı:</string>
    <string name="textToplam">5 +13</string>
    <string name="btnGiris">Giriş</string>
    <string name="textRandom">Üniversitemize 2017 yılından itibaren kayıt yaptıran öğrencilerimizin bilişim hizmetlerinden yararlanabilmeleri için gerekli kullanıcı adı ve şifre öğrenme yöntemi yenilenmiştir. Buradan erişebileceğiniz sayfada yer alan görseldeki adımları gerçekleştiren öğrenciler internet üzerinden kendilerine ait bilgilere erişebilmektedir. Herhangi bir sorunla karşılaşan öğrenciler için broşürde yapılması gerekenler anlatılmıştır.</string>
    <string name="btnButton">Button</string>
    <string name="textSinifOrtalamasi">Sınıf Ortalaması</string>
    <string name="textIlanTarihi">İlan Tarihi</string>
    <string name="textVize">Vize</string>
    <string name="textFinal">Final</string>
    <string name="textOgretimUyesi">Öğretim Üyesi</string>
    <string name="textHarfNotu">Harf Notu</string>
    <string name="textDurumu">Durumu</string>
    <string name="textAlan">Önlisans/Lisans/Enstitü</string>
    <string name="btnOgrenciGirisi">Öğrenci Girişi</string>
    <string name="btnAkademisyenGirisi">Akademisyen Girişi</string>
    <string name="underConstruction">Under Construction</string>
    <string name="textGondericiTipi">Gönderici Tipi</string>
    <string name="textTitleOfMsg">Gelen Mesajlar</string>
    <string name="textTarihAraligi">Tarih Aralığı</string>
    <string name="textDash"> - </string>
    <string-array name="terms">
        <item>2018—2019 Bahar</item>
        <item>2018—2019 Güz</item>
        <item>2017—2018 Bahar</item>
        <item>2017—2018 Güz</item>
    </string-array>
    <string-array name="gondericiTipi">
        <item>Tümü</item>
        <item>Danışman</item>
        <item>2. Danışman</item>
        <item>Alınan Dersler</item>
        <item>Hazırlık Alınan Dersler</item>
    </string-array>
    <string-array name="durumu">
        <item>Tümü</item>
        <item>Yeni Mesajlar</item>
        <item>Okunan Mesajlar</item>
        <item>Silinen Mesajlar</item>
    </string-array>
</resources>
