<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/export"
    tools:context=".MainPage">

    <LinearLayout
        android:id="@+id/lytTitle"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            app:srcCompat="@drawable/msku" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textMugla"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/txtTitle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textUniversityName"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/txtTitle3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textStudentInformationSystem"
                android:textAlignment="center" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            app:srcCompat="@drawable/msku" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgProfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/txtNumAndName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textNumAndName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/ic_dialog_email" />

        <ImageButton
            android:id="@+id/btnOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/btn_dialog" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnNot2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:clickable="false"
                android:text="@string/btnNotBilgisi" />

            <Button
                android:id="@+id/btnDevamsizlik2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:clickable="false"
                android:text="@string/btnDevamsizlikBilgisi" />

            <Button
                android:id="@+id/btnTranscript2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:clickable="false"
                android:text="@string/btnTranskript" />

            <Button
                android:id="@+id/btnAcademic2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:clickable="false"
                android:text="@string/btnAkademikTakvim" />

            <Button
                android:id="@+id/btnSinav2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:clickable="false"
                android:text="@string/btnSinavTakvimi" />

            <Button
                android:id="@+id/btnSyllabus2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:clickable="false"
                android:text="@string/btnMufredatDurumu" />

            <Button
                android:id="@+id/btnHazirlik2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:clickable="false"
                android:text="@string/btnHazirlikIslemleri" />
        </LinearLayout>
    </ScrollView>

    <ListView
        android:id="@+id/listButtons"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </ListView>

</LinearLayout>